objects/Opportunity.object
<CustomObject>
    <fields>
        <fullName>Current_Processing_Company__c</fullName>
        <label>Current Processing Company</label>
        <picklist>
            <picklistValues>
                <fullName>CPS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>First Data</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Moneris</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chase Payment Tech</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TD Merchant Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Elavon</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dejardins</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Global Payment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PayPal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Square</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Stripe</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Daily_PB_Amount__c</fullName>
        <label>Daily PB Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Date_Lease_Ends__c</fullName>
        <label>Date Lease Ends</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Paid__c</fullName>
        <label>Date Paid</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Received__c</fullName>
        <label>Date Received</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Deal_Type__c</fullName>
        <label>Deal Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Declined_Closed_Lost_Reviewed_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Declined/Closed Lost Reviewed By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Opportunities3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Declined_Closed_Lost_Reviewed_Date__c</fullName>
        <label>Declined/Closed Lost Reviewed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Declined_Stage_Date_Time__c</fullName>
        <label>Declined Stage Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Declined_Stage_Date__c</fullName>
        <label>Declined Stage Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Description_ROI__c</fullName>
        <label>Description ROI</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Details_Do_You_Owe_Money_To_The_CRA__c</fullName>
        <label>Details for CRA</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Details_State_Federal_Tax_Liens__c</fullName>
        <label>Details for Consumer Proposal</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Details_for_close_the_business__c</fullName>
        <label>Details for Closing The Business</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DialSource__DS_Owner_ID__c</fullName>
        <description>The record owner&apos;s Salesforce ID. Used in Campaign source reports to distribute the records using the Record Owner Distribution feature</description>
        <formula>OwnerId</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>The record owner&apos;s Salesforce ID. Used in Campaign source reports to distribute the records using the Record Owner Distribution feature</inlineHelpText>
        <label>DS Owner ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DialSource__Datetime_of_Last_Disposition_DS__c</fullName>
        <description>Time stamp of when the last Disposition was clicked</description>
        <inlineHelpText>Time stamp of when the last Disposition was clicked</inlineHelpText>
        <label>Datetime of Last Disposition</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>DialSource__Last_Call_Campaign_Name__c</fullName>
        <description>Name of the Call Campaign the record was last called from</description>
        <inlineHelpText>Name of the Call Campaign the record was last called from</inlineHelpText>
        <label>Last Call Campaign Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DialSource__Last_Disposition_DS__c</fullName>
        <description>Name of the last Disposition clicked</description>
        <inlineHelpText>Name of the last Disposition clicked</inlineHelpText>
        <label>Last Disposition</label>
        <length>140</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DialSource__Next_Call_DS__c</fullName>
        <description>Datetime field used to set the next call datetime for reference in automation or Reports/List Views</description>
        <inlineHelpText>Datetime field used to set the next call datetime for reference in automation or Reports/List Views</inlineHelpText>
        <label>Next Call</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>DialSource__Total_Call_Count_DS__c</fullName>
        <description>Total number of calls made on this record</description>
        <inlineHelpText>Total number of calls made on this record</inlineHelpText>
        <label>Total Call Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Discovery_Completed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Discovery Completed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Do_You_Owe_Money_To_The_CRA__c</fullName>
        <label>Do You Owe Money To The CRA?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Do_you_Own_Lease_your_terminals__c</fullName>
        <label>Do you Own/Lease/Rent Your Terminals</label>
        <picklist>
            <picklistValues>
                <fullName>Own</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lease</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rent</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Do_you_Process_Credit_card__c</fullName>
        <label>Do you Process Credit card</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Do_you_usually_close_the_business_during__c</fullName>
        <label>Business Closes During Part Of The Year?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Eligible__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Eligible</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Est_ReNewal_Date__c</fullName>
        <label>Est ReNewal Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Expected_Commission__c</fullName>
        <label>Expected Commission</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Factor_Rate__c</fullName>
        <label>Factor Rate</label>
        <precision>4</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Fax_Number__c</fullName>
        <label>Fax Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Final_UW_Stage_Date_Time__c</fullName>
        <label>Final UW Stage Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Final_UW_Stage_Date__c</fullName>
        <label>Final UW Stage Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Funded_Amount__c</fullName>
        <label>Funded Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Funded_Stage_Date_Time__c</fullName>
        <label>Funded Stage Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Funded_Stage_Date__c</fullName>
        <label>Funded Stage Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Funding_Notes__c</fullName>
        <label>Funding Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>GST_HST__c</fullName>
        <label>GST/HST/TAX ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Halfway_to_Renewal__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Halfway to Renewal</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Hold_Back__c</fullName>
        <label>Hold Back %</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Holdback_Per__c</fullName>
        <label>Holdback %</label>
        <precision>5</precision>
        <scale>3</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>How_will_you_use_the_loan__c</fullName>
        <label>How will you use the loan?</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ISO_Commission_Payable__c</fullName>
        <label>ISO Commission Payable</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ISO_Commission__c</fullName>
        <label>ISO Commission %</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>ISO_Contact__c</fullName>
        <label>ISO Contact</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ISO_Date_Paid__c</fullName>
        <label>ISO Date Paid</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ISO_Name__c</fullName>
        <label>ISO Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ISO_Origination_Fee_Payable__c</fullName>
        <label>ISO Origination Fee Payable</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ISO_Origination_Fee__c</fullName>
        <label>ISO Origination Fee %</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>ISO_Risk_Fee_Payable__c</fullName>
        <label>ISO Risk Fee Payable</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ISO_Risk_Fee__c</fullName>
        <label>ISO Risk Fee %</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>ISO_Total_Payable__c</fullName>
        <formula>ISO_Commission_Payable__c +  ISO_Risk_Fee_Payable__c + ISO_Origination_Fee_Payable__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ISO Total Payable</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ISO_s_WL_Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>ISO&apos;s WL Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Opportunities1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Income_Percentage__c</fullName>
        <formula>( Cloufi__Payback_Amount__c -  Amount ) /  Cloufi__Payback_Amount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Income %</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Internal_Lender__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Internal Lender</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Last_Settlement_Effective_Date__c</fullName>
        <label>Last Settlement Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Lead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Lead</label>
        <referenceTo>Lead</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Lender_Name__c</fullName>
        <label>Lender Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lender_s_Commission_Amount__c</fullName>
        <label>Lender&apos;s Commission Amount</label>
        <summarizedField>CloufiServicing__Syndication__c.Commission__c</summarizedField>
        <summaryFilterItems>
            <field>CloufiServicing__Syndication__c.Is_Internal__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>CloufiServicing__Syndication__c.CloufiServicing__Opportunity__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Lender_s_Funded_Amount__c</fullName>
        <formula>Amount * Lender_s_Funded_Percentage__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Lender&apos;s Funded Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Lender_s_Funded_Percentage__c</fullName>
        <label>Lender&apos;s Funded %</label>
        <summarizedField>CloufiServicing__Syndication__c.CloufiServicing__Syndication_Percentage__c</summarizedField>
        <summaryFilterItems>
            <field>CloufiServicing__Syndication__c.Is_Internal__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>CloufiServicing__Syndication__c.CloufiServicing__Opportunity__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Lender_s_Income__c</fullName>
        <formula>Lender_s_Payback_Amount__c -  Lender_s_Funded_Amount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Lender&apos;s Income</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Lender_s_Origination__c</fullName>
        <formula>Lender_s_Funded_Amount__c * Origination_Percentage__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Lender&apos;s Origination</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Lender_s_Payback_Amount__c</fullName>
        <formula>Cloufi__Payback_Amount__c *  Lender_s_Funded_Percentage__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Lender&apos;s Payback Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Lender_s_Remaining_Balance__c</fullName>
        <formula>Lender_s_Payback_Amount__c -  Lender_s_Settled_Payments__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Lender&apos;s Remaining Balance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Lender_s_Settled_Payments__c</fullName>
        <label>Lender&apos;s Settled Payments</label>
        <summarizedField>Cloufi__Payments__c.Cloufi__Payment_Amount__c</summarizedField>
        <summaryFilterItems>
            <field>Cloufi__Payments__c.Internal_Payment__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>Cloufi__Payments__c.Cloufi__Opportunity__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Length_of_Ownership__c</fullName>
        <label>Years of Ownership</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10+</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Line_of_Credit_Formula__c</fullName>
        <formula>IF(NOT(ISNULL(Line_of_Credit__c)) &amp;&amp; Line_of_Credit__c &gt; 0,TRUE,FALSE)</formula>
        <label>Line of Credit</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Line_of_Credit__c</fullName>
        <label>Line of Credit/ Overdraft Protection</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Lost_Reason__c</fullName>
        <label>Lost Reason</label>
        <picklist>
            <controllingField>StageName</controllingField>
            <picklistValues>
                <fullName>Lost to Competitor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No Budget / Lost Funding</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No Decision / Non-Responsive</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Price</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Ready</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>With Competitor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BK / Taxes / CRA / Judge</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>High Rates</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bad Ratings</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not in Biz</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Duplicate</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Mailing_City__c</fullName>
        <label>Mailing City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mailing_State__c</fullName>
        <label>Province</label>
        <picklist>
            <picklistValues>
                <fullName>Alberta</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>British Columbia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Manitoba</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>New Brunswick</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Newfoundland and Labrador</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nova Scotia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ontario</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Prince Edward Island</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Quebec</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Saskatchewan</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Mailing_Street__c</fullName>
        <label>Mailing Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mailing_Zip_Code__c</fullName>
        <label>Mailing Zip Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Master_Payoff_Per__c</fullName>
        <formula>IF(NOT(ISNULL(Payoff__c)) &amp;&amp; Payoff__c &gt; Payoff_Percentage_Time__c , Payoff__c, IF(NOT(ISNULL(Payoff_Percentage_Time__c)), Payoff_Percentage_Time__c, 0))</formula>
        <label>Master Payoff %</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Monthly_Rent_or_Mortgage__c</fullName>
        <label>Monthly Rent and/or Mortgage Payments $</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Near_Renewal__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Near Renewal</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Net_Funded__c</fullName>
        <label>Net Funded</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>No_Answer__c</fullName>
        <label>No Answer Counter</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>No_of_Positions__c</fullName>
        <label>No. of Positions</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>No_of_terminals__c</fullName>
        <label>No. of terminals</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10+</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Offer_Notes__c</fullName>
        <label>Offer Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Office_Mobile_Number__c</fullName>
        <label>Bank Number/Mobile Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Opener_Name__c</fullName>
        <label>Opener Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_Owner_Company_Name__c</fullName>
        <formula>Owner.CompanyName</formula>
        <label>Opportunity Owner Company Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_Owner_Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity Owner Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Opportunity_Owner_Name__c</fullName>
        <formula>Owner.FirstName + &apos; &apos; + Owner.LastName</formula>
        <label>Opportunity Owner Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_Owner_Role_Name__c</fullName>
        <formula>Owner.UserRole.Name</formula>
        <label>Opportunity Owner: Role: Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_Stage_Age__c</fullName>
        <formula>IF( ISPICKVAL( StageName , &apos;Revived&apos;) , TODAY()- Revived_Stage_Date__c , 
IF( ISPICKVAL( StageName, &apos;Prospecting&apos;) , TODAY() - Prospecting_Stage_Date__c , 
IF( ISPICKVAL( StageName, &apos;App Sent&apos;) , TODAY() - App_Sent_Stage_Date__c , 
IF( ISPICKVAL( StageName, &apos;App In Missing Info&apos;) , TODAY() - App_In_Missing_Info_Stage_Date__c , 
IF( ISPICKVAL( StageName , &apos;UW&apos;) , TODAY() - UW_Stage_Date__c, 
IF( ISPICKVAL( StageName , &apos;Approved&apos;) , TODAY() - Approved_Stage_Date__c , 
IF( ISPICKVAL( StageName , &apos;Declined&apos;) , TODAY() - Declined_Stage_Date__c , 
IF( ISPICKVAL( StageName , &apos;Contract Requested&apos;) , TODAY() - Contract_Requested_Stage_Date__c , 
IF( ISPICKVAL( StageName , &apos;Contract Received&apos;) , TODAY() - Contract_Received_Stage_Date__c , 
IF( ISPICKVAL( StageName , &apos;Contract Sent&apos;) , TODAY() - Contract_Sent_Stage_Date__c , 
IF( ISPICKVAL( StageName , &apos;Contract Signed Partial&apos;) , TODAY() - Contract_Signed_Partial_Stage_Date__c , 
IF( ISPICKVAL( StageName , &apos;Final UW&apos;) , TODAY() - Final_UW_Stage_Date__c , 
IF( ISPICKVAL( StageName , &apos;Funded&apos;) , TODAY() - Funded_Stage_Date__c , 
IF( ISPICKVAL( StageName , &apos;Completed&apos;) , TODAY() - Completed_Stage_Date__c , TODAY() - Closed_Lost_Stage_Date__c 
))))))))))))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity Stage Age</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Original_Owner__c</fullName>
        <label>Original Owner</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Origination_Fee_Payable__c</fullName>
        <label>Origination Fee Payable</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Origination_Fee_Received__c</fullName>
        <label>Origination Fee Received</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Origination_Percentage__c</fullName>
        <formula>CloufiServicing__Origination_Fee__c/Cloufi__Payback_Amount__c</formula>
        <label>Origination %</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Own_or_Lease__c</fullName>
        <label>Own/Rent</label>
        <picklist>
            <picklistValues>
                <fullName>Own</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rent</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Owner1Ownership__c</fullName>
        <label>Ownership %</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Owner1_Ownership__c</fullName>
        <label>Ownership %</label>
        <picklist>
            <picklistValues>
                <fullName>Less than 50</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>51 - 70</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>71 - 99</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>100</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Owner1_credit_info__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Owner1 credit info</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Owner_1_Address_Street__c</fullName>
        <label>Home Address 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Owner_1_CellPhone__c</fullName>
        <label>Owner 1 Cell</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Owner_1_City__c</fullName>
        <label>Owner 1 City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Owner_1_Credit_Score__c</fullName>
        <label>Owner 1 Credit Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Owner_1_DOB__c</fullName>
        <label>Owner Date Of Birth</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Owner_1_Email__c</fullName>
        <label>Owner 1 Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Owner_1_First_Name__c</fullName>
        <label>First Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Owner_1_Full_Name__c</fullName>
        <formula>Owner_1_First_Name__c + &apos; &apos; + Owner_1_Last_Name__c</formula>
        <label>Owner 1: Full Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Owner_1_Last_Name__c</fullName>
        <label>Last Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Owner_1_Phone__c</fullName>
        <label>Onwer&apos;s Home Phone Number</label>
        <type>Phone</type>
    </fields>
</CustomObject>